manifests/operator/01-ossm3/istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-discovery: enabled
