manifests/operator/01-ossm3/ztunnel.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ztunnel
  labels:
    istio-discovery: enabled
